--- a/static/styles.css
+++ b/static/styles.css
@@ -5,7 +5,7 @@
     --white-color: #FFFFFF;
     --vanilla: #EBEBAD;
     --orange: #E53D00;
-    --light-blue: #0FA3B1;
+    --light-blue: #2892D7;
     --dark-blue: #226CE0;
     --dark-bg-blue: #141B41;
     --default-border-radius: 8px;
