--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,7 @@
         <nav class="navbar bg-body-tertiary">
             <div class="container">
                 <a class="navbar-brand" href="/">
-                    <img src="/static/improov.svg" alt="Improov" width="64" height="64" class="improov-icon">
+                    <img src="/static/improov.svg" alt="XPT" width="64" height="64" class="improov-icon">
                 </a>
                 
                 {% if login %}
