--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block main %}
+<h2>Welcome Display Name</h2>
 <div class="grid-container">
     <a href="/add-expenses" class="grid-item-link">
         <button class="grid-item">
