--- a/templates/add-expenses.html
+++ b/templates/add-expenses.html
@@ -5,4 +5,85 @@
 {% endblock %}
 
 {% block main %}
+<form method="post" action="{{ url_for('add_expense') }}">
+    <div class="form-group">
+        <label for="mainCategory">Main Category</label>
+        <select class="form-control" id="mainCategory" name="main_category" disabled>
+            <option disabled selected>Select Main Category</option>
+            {% for row in mc_rows %}
+            <option value="{{ row.id }}">{{ row.category }} ({{ row.type }})</option>
+            {% endfor %}
+        </select>
+    </div>
+    <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="subCategoryCheckbox" name="sub_category_check">
+        <label class="form-check-label" for="subCategoryCheckbox">Select Sub Category</label>
+    </div>
+    <div class="form-group mt-2">
+        <label for="subCategory">Sub Category</label>
+        <select class="form-control" id="subCategory" name="sub_category" disabled>
+            <option disabled selected>Select Sub Category</option>
+            {% for row in sc_rows %}
+            <option value="{{ row.id }}">{{ row.sub_category }} [{{ row.category }}] ({{ row.type }}) </option>
+            {% endfor %}
+        </select>
+    </div>
+    <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="customCategoryCheckbox" name="custom_category_check">
+        <label class="form-check-label" for="customCategoryCheckbox">Custom Category</label>
+    </div>
+    <div class="form-group mt-2">
+        <label for="customCategory">Custom Category</label>
+        <select class="form-control" id="customCategory" name="custom_category" disabled>
+            <option disabled selected>Select Custom Category</option>
+            {% for row in uc_rows %}
+            <option value="">Investment</option>
+            {% endfor %}
+            <option value="2">Entertainment</option>
+            <option value="3">Savings</option>
+        </select>
+    </div>
+    <div class="form-group">
+        <label for="amount">Amount</label>
+        <input type="number" class="form-control" id="amount" name="amount" required>
+    </div>
+    <div class="form-group">
+        <label for="description">Description</label>
+        <input type="text" class="form-control" id="description" name="description">
+    </div>
+    <div class="form-group">
+        <label for="date">Date</label>
+        <input type="date" class="form-control" id="date" name="date" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Add Expense</button>
+</form>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script>
+$(document).ready(function(){
+    $('#mainCategory').prop('disabled', false);
+
+    $('#subCategoryCheckbox').change(function(){
+        if($(this).is(':checked')){
+            $('#subCategory').prop('disabled', false);
+        } else {
+            $('#subCategory').prop('disabled', true);
+        }
+    });
+
+    $('#customCategoryCheckbox').change(function(){
+        if($(this).is(':checked')){
+            $('#mainCategory').prop('disabled', true);
+            $('#subCategory').prop('disabled', true);
+            $('#subCategoryCheckbox').prop('checked', false);
+            $('#customCategory').prop('disabled', false);
+        } else {
+            $('#mainCategory').prop('disabled', false);
+            $('#customCategory').prop('disabled', true);
+        }
+    });
+});
+</script>
 {% endblock %}
