backend phase 2 frontend phase 3

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-<h2>Welcome <span class="imp-text">Display Name</span></h2>
+<h2>Welcome <span class="imp-text">{{ display_name }} </span></h2>
 <div class="grid-container">
     <a href="/add-expenses" class="grid-item-link">
         <button class="grid-item">
