--- a/templates/add-expenses.html
+++ b/templates/add-expenses.html
@@ -43,7 +43,7 @@
     </div>
     <div class="form-group">
         <label for="amount">Amount</label>
-        <input type="number" class="form-control" id="amount" name="amount" required>
+        <input type="number" step="0.01" class="form-control" id="amount" name="amount" required>
     </div>
     <div class="form-group">
         <label for="description">Description</label>
