--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 
-        <link href="/static/improov.svg" rel="icon">
+        <link href="/static/xpt.png" rel="icon">
 
         <link href="/static/styles.css" rel="stylesheet">
 
@@ -34,7 +34,7 @@
         <nav class="navbar bg-body-tertiary">
             <div class="container">
                 <a class="navbar-brand" href="/">
-                    <img src="/static/improov.svg" alt="XPT" width="64" height="64" class="improov-icon">
+                    <img src="/static/xpt.png" alt="XPT" width="64" height="64" class="xpt-icon">
                 </a>
                 
                 {% if session["user_id"] %}
